# Paperpal-Agent

./: README.md
agent-paperpal/backend/: Dockerfile  alembic.ini  check_jobs_debug.py  check_journals.py  check_out.txt  check_s3.py  dump.py  dump2.py  dump3.py  dump4.py  dump_report.py  dump_sc.py  dump_sc_v2.py  pipeline_out.txt  pipeline_out_utf8.txt  pipeline_output.txt  pyproject.toml  pytest_full.txt  pytest_full2.txt  pytest_full3.txt  pytest_out.txt  pytest_out2.txt  requirements.txt  run_last.txt  sc_output.txt  test_results.txt  trace.json  validate_api_sc.py  validate_err.txt  validate_err_cmd.txt  validate_err_cmd2.txt  validate_interpretation_sc.py  validate_parsing_sc.py  validate_pipeline.py  validate_renderer_sc.py  validate_report_clean.txt  validate_sc.py  validate_success_criteria.py  verify_sc_final.py
agent-paperpal/backend/alembic/: env.py
agent-paperpal/backend/alembic/versions/: 001_initial_tables.py  384988171dc0_add_full_name_to_user.py
agent-paperpal/backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
agent-paperpal/backend/app/agents/: __init__.py  orchestrator.py
agent-paperpal/backend/app/api/: __init__.py  websocket.py
agent-paperpal/backend/app/middleware/: __init__.py  auth.py
agent-paperpal/backend/app/models/: __init__.py  base.py  job.py  style_cache.py  user.py
agent-paperpal/backend/app/schemas/: __init__.py  ir.py  ir_schema.py  job.py  job_state.py  (+6 more)
agent-paperpal/backend/tests/: __init__.py  conftest.py  test_health.py  test_schemas.py  test_schemas_validate.py  test_success_criteria.py
(+120 files in other folders)
